# Activation_Function_Research

./: LICENSE  README.md  benchmark.bat  benchmark.sh  benchmark_audio.bat  benchmark_audio.sh  benchmark_cifar10.bat  benchmark_cifar10.sh  benchmark_periodic_gelu_long.bat  benchmark_periodic_gelu_long.sh  benchmark_peuaf_cifar10.bat  benchmark_peuaf_cifar10.sh  benchmark_peuaf_evolution.bat  benchmark_peuaf_evolution.sh  benchmark_sine_triangle.bat  benchmark_sine_triangle.sh  download_datasets.bat  download_datasets.sh  plot_activations.bat  plot_activations.sh  pyproject.toml  requirements-dev.txt  requirements.txt  tensorboard.bat  tensorboard.sh  train.bat  train.sh  train_cifar10.bat  train_cifar10.sh  train_cifar10_resnet18.bat  train_cifar10_resnet18.sh  train_peuaf_multistart.bat  train_peuaf_multistart.sh  train_synthetic_pqd.bat  train_synthetic_pqd.sh
activation_benchmark/: __init__.py  activations.py  audio_benchmark.py  benchmark.py  checkpoints.py  config.py  data.py  download_datasets.py  evaluate_checkpoint.py  expressivity_benchmark.py  frequency_optimization.py  model.py  multistart.py  plot_activations.py  runtime.py  runtime_benchmark.py  train.py  trainer.py
configs/: audio_mini_speech_commands.yaml  audio_mini_speech_commands_smoke.yaml  benchmark_activations.yaml  benchmark_audio_activations.yaml  benchmark_audio_activations_smoke.yaml  benchmark_cifar10_activations.yaml  benchmark_cifar10_smoke.yaml  benchmark_peuaf_frequency_optimization.yaml  benchmark_sine_triangle_cifar10.yaml  benchmark_sine_triangle_mnist.yaml  cifar10.yaml  cifar100.yaml  (+19 more)
(+42 files in other folders)
