[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "periodic-activation-benchmark"
version = "0.2.0"
description = "Reproducible PyTorch research on periodic and learned activations."
requires-python = ">=3.10"
dependencies = [
    "torch==2.2.2",
    "torchvision==0.17.2",
    "tensorboard>=2.14,<3",
    "matplotlib>=3.7,<4",
    "numpy>=1.24,<3",
    "PyYAML>=6,<7",
]

[project.optional-dependencies]
dev = ["pytest>=7,<9"]
research = ["pygad>=3.7,<4"]

[tool.setuptools.packages.find]
include = ["activation_benchmark*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
